--- a/school-portal/src/main/webapp/styles.css
+++ b/school-portal/src/main/webapp/styles.css
@@ -3,7 +3,7 @@
 /* Global Styles */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #c0c0c0;
+    background-color: rgb(0, 255, 255);;
     margin: 0;
     padding: 20px;
     color: #555;
